testsuite/poke.pkl/offset-type-diag-6.pk
/* { dg-do compile } */

type Packet = struct { uint<8>[] data; };
#Packet; /* { dg-error "on complete types" } */
